--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,6 @@ header {
   margin-top: 1.2em;
   padding: .8em 1em;
   color: white;
-/*   background-color: black; */
    background-color: black;
   border: 2px solid #fff;
   border-radius: 4em;
@@ -169,4 +168,20 @@ header {
 .vertical {
     border-left: 5px solid rgb(11, 218, 81);
     /* height: 200px; */
+}
+
+
+.box__section {
+
+  width:100%;
+  padding: 2em 2em;
+  word-wrap: break-word;
+  background-color: white;
+  margin: 0;
+  color: #24252a;
+  border-radius: 25px;    
+}
+
+.hyperlink{
+  font-size: .5em;
 }
